changed the modulerights